move js files from templates to script folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,10 @@
       </div>
 
       <div class="header-links-container">
-        <button class="header-link" onclick="showRegisterView()">Cadastre-se</button>
-        <button class="header-link" onclick="showLoginView()">Entrar</button>
+        <a class="header-link" href="register.html">Cadastre-se</a>
+        <a class="header-link" href="login.html">Entrar</a>
+        <!-- <button class="header-link" onclick="showRegisterView()">Cadastre-se</button>
+        <button class="header-link" onclick="showLoginView()">Entrar</button> -->
       </div>
     </div>
     <div class="header-pseudo-shadow"></div>
