--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>GuestPet</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900|Crete+Round" rel="stylesheet">
-    <link href="style/login-register.css" rel ="stylesheet" type="text/css"/>
+    <link href="../style/login-register.css" rel ="stylesheet" type="text/css"/>
   </head>
 
   <div align="center" class="login-container">
