--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,7 @@
     </form>
   </div>
 	
-	<script src = "FileSaver.js"></script>	<!-- isso a gente vai tirar quando der pra salvar no bd -->
-	<script src = "register.js"></script>
+	<script src = "../script/FileSaver.js"></script>	<!-- isso a gente vai tirar quando der pra salvar no bd -->
+	<script src = "../script/register.js"></script>
 
 </hmtl>
