--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,22 @@
     <title>GuestPet</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900|Crete+Round" rel="stylesheet">
     <link href="../style/main.css" rel ="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="../script/login.js"></script>
-    <script type="text/javascript" src="../script/register.js"></script>
+    
+    <script type="text/javascript" src="../scripts/jquery-3.1.0.js"></script>
+    <script type="text/javascript" src="../scripts/event.js"></script>
+    <script type="text/javascript" src="../scripts/index.js"></script>
   </head>
   <body>
 
     <div class="header-container">
       <div class="header-logo-container">
         <div class="header-logo-image" src="../images/guestPetLogo"></div>
-        <a class="header-logo-title" href="index.html">GuestPet</a>
+        <a id="homeButton" class="header-logo-title" href="index.html">GuestPet</a>
       </div>
 
       <div class="header-links-container">
         <a class="header-link" href="register.html">Cadastre-se</a>
         <a class="header-link" href="login.html">Entrar</a>
-        <!-- <button class="header-link" onclick="showRegisterView()">Cadastre-se</button>
-        <button class="header-link" onclick="showLoginView()">Entrar</button> -->
       </div>
     </div>
     <div class="header-pseudo-shadow"></div>
@@ -41,7 +41,7 @@
     </div>
 
     <div align="center" class="footer-button-container">
-      <a class="footer-button" href="about.html">CONHEÇA GUESTPET</a>
+      <div id="aboutButton" class="footer-button">CONHEÇA GUESTPET</div>
     </div>
 
   </body>
