--- a/templates/register.html
+++ b/templates/register.html
@@ -25,8 +25,8 @@
     <form action="javascript:void(0)">
       <input class="login-field" type="text" id="nameField" value="nome"> <p style="display:none" id="nameError"></p><br>
       <input class="login-field" type="text" id="emailField" value="email"><p style="display:none" id="emailError"></p><br>
-      <input class="login-field" type="text" id="passwordField" value="senha"><p style="display:none" id="passwordError"></p><br>
-      <input class="login-field" type="text" id="confirmPasswordField" value="confirme senha"><br>
+      <input class="login-field" type="password" id="passwordField" value="senha"><p style="display:none" id="passwordError"></p><br>
+      <input class="login-field" type="password" id="confirmPasswordField" value="confirme senha"><br>
       <input class="login-submit" type="submit" id ="registerButton" value="Cadastrar"><br>
     </form>
   </div>
