--- a/templates/owner.html
+++ b/templates/owner.html
@@ -1,9 +1,5 @@
-<link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900|Crete+Round" rel="stylesheet">
-<link href="../style/home.css" rel ="stylesheet" type="text/css"/>
-<script type="text/javascript" src="../scripts/jquery-3.1.0.js"></script>
-<script type="text/javascript" src="../scripts/event.js"></script>
-<script type="text/javascript" src="../scripts/model.js"></script>
-<script type="text/javascript" src="../scripts/owner.js"></script>
 <h1>
-  OWNER, BEACH
+  <div id="title">
+    OWNER, BEACH
+  </div>
 </h1>
