--- a/templates/owner.html
+++ b/templates/owner.html
@@ -1,5 +1,8 @@
 <h1>
-  <div id="title">
-    OWNER, BEACH
-  </div>
+  <h1 id="title">
+    Owner
+  </h1>
+  <h2 id="subtitle">
+    this is for owner
+  </h2>
 </h1>
