make login page redirect to register when registerButton is clicked

--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
       <input class="login-submit" id="loginButton" type="submit" value="Entrar"><br>
     </form>
 
-    <a class="login-might-register-button" href="index.html">Não possui cadastro?</a>
+    <a id="registerButton" class="login-might-register-button">Não possui cadastro?</a>
   </div>
 
 </hmtl>
