add city field to register form

--- a/templates/register.html
+++ b/templates/register.html
@@ -25,6 +25,7 @@
     <form action="javascript:void(0)">
       <input class="login-field" type="text" id="nameField" value="nome"> <p style="display:none" id="nameError"></p><br>
       <input class="login-field" type="text" id="emailField" value="email"><p style="display:none" id="emailError"></p><br>
+      <input class="login-field" type="text" id="cityField" value="cidade"><p style="display:none" id="cityError"></p><br>
       <input class="login-field" type="password" id="passwordField" value="senha"><p style="display:none" id="passwordError"></p><br>
       <input class="login-field" type="password" id="confirmPasswordField" value="confirme senha"><br>
       <input class="login-submit" type="submit" id ="registerButton" value="Cadastrar"><br>
