show home.html (with searchHost) after login

--- a/templates/owner.html
+++ b/templates/owner.html
@@ -2,8 +2,10 @@
   <h1 id="title">
     Owner
   </h1>
-  <h2 id="subtitle">
-    this is for owner
-  </h2>
+  
+  <div id="searchHostContainer"></div>
+  
+  <div class="homeComponentsDivisor"></div>
+  
   <button id="buttonId">capivaras verdes</button>
 </h1>
