--- a/style/home.css
+++ b/style/home.css
@@ -2,14 +2,19 @@ body {
   font-family: 'Raleway';
 }
 
+.content-body {
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
 h1 {
-  font-size: 34px;
+  font-size: 36px;
   font-weight: 700;
   color: #222;
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 26px;
   font-weight: 300;
   color: #555;
 }
@@ -32,4 +37,15 @@ h2 {
 
 .user-mode-selected {
   border-bottom: 2px solid #333;
+}
+
+.homeComponent {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.homeComponentsDivisor {
+  background-color: grey;
+  height: 1px;
+  width: 100%;
 }
