create static profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,6 @@
     <link href="../style/home.css" rel ="stylesheet" type="text/css"/>
   </head>
   <body>
-
     <div class="header-container">
       <div class="header-logo-container">
         <div class="header-logo-image" src="../images/guestPetLogo"></div>
@@ -24,9 +23,27 @@
     <div class="header-pseudo-shadow"></div>
 
     <div class="content-body">
-      <h1>Profile</h1>
-      <h2>Aqui tem coisas de profile</h2>
+      <h1>Fulano de tal</h1>
+      
+      <div class="homeComponent">
+        <h2>E-mail</h2>
+        <h3>fulaninho@gmail.com</h3>
+      </div>
+      
+      <div class="homeComponentsDivisor"></div>
+      
+      <div class="homeComponent">
+        <h2>Tipo de usuário</h2>
+        <h3>[X] Owner<br>[  ] Host</h3>
+      </div>
+      
+      <div class="homeComponentsDivisor"></div>
+      
+      <div class="homeComponent">
+        <h2>Cidade</h2>
+        <h3>Happy Harbor</h3>
+      </div>
+      
     </div>
-
   </body>
 </html>
