--- a/style/home.css
+++ b/style/home.css
@@ -11,12 +11,22 @@ h1 {
   font-size: 36px;
   font-weight: 700;
   color: #222;
+  margin-bottom: 30px;
 }
 
 h2 {
   font-size: 26px;
+  font-weight: 400;
+  color: #444;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 20px;
   font-weight: 300;
-  color: #555;
+  color: #777;
+  margin: 0;
 }
 
 .user-modes-container {
