center login and register views

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
   <div align="center" class="login-container">
 
     <div class="login-header">
-      <a class="login-header-close" href="index.html">x</a>
+      <a class="login-header-close" href="index.html"><</a>
       <div class="login-header-title">
         Fazer login
       </div>
@@ -31,5 +31,4 @@
 
     <a id="registerButton" class="login-might-register-button">Não possui cadastro?</a>
   </div>
-
 </hmtl>
