--- a/style/login-register.css
+++ b/style/login-register.css
@@ -1,6 +1,18 @@
+body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .login-container {
+  /*display: table-cell;*/
+  /*position: absolute;
+  margin: auto;
+  text-align: center;*/
+  padding: 10px;
   font-family: 'Raleway', sans-serif;
-  width: 300px;
+  width: 50%;
   height: 260px;
 }
 
@@ -14,7 +26,7 @@
 
 .login-header-close {
   text-decoration: none;
-  font-weight: 300;
+  font-weight: 500;
   margin-left: 10px;
   font-size: 18px;
   color: #ED892D;
