--- a/templates/register.html
+++ b/templates/register.html
@@ -13,24 +13,25 @@
     <script type="text/javascript" src="../scripts/FileSaver.js"></script>
   </head>
 
-  <div align="center" class="login-container">
-
-    <div class="login-header">
-      <a class="login-header-close" href="index.html">x</a>
-      <div class="login-header-title">
-        Realizar cadastro
+  <body>
+    <div align="center" class="login-container">
+      <div class="login-header">
+        <a class="login-header-close" href="index.html"><</a>
+        <div class="login-header-title">
+          Realizar cadastro
+        </div>
       </div>
-    </div>
 
-    <form action="javascript:void(0)">
-      <input class="login-field" type="text" id="nameField" value="nome"> <p style="display:none" id="nameError"></p><br>
-      <input class="login-field" type="text" id="emailField" value="email"><p style="display:none" id="emailError"></p><br>
-      <input class="login-field" type="text" id="cityField" value="cidade"><p style="display:none" id="cityError"></p><br>
-      <input class="login-field" type="password" id="passwordField" value="senha"><p style="display:none" id="passwordError"></p><br>
-      <input class="login-field" type="password" id="confirmPasswordField" value="confirme senha"><br>
-      <input class="login-submit" type="submit" id ="registerButton" value="Cadastrar"><br>
-    </form>
-  </div>
+      <form action="javascript:void(0)">
+        <input class="login-field" type="text" id="nameField" value="nome"> <p style="display:none" id="nameError"></p><br>
+        <input class="login-field" type="text" id="emailField" value="email"><p style="display:none" id="emailError"></p><br>
+        <input class="login-field" type="text" id="cityField" value="cidade"><p style="display:none" id="cityError"></p><br>
+        <input class="login-field" type="password" id="passwordField" value="senha"><p style="display:none" id="passwordError"></p><br>
+        <input class="login-field" type="password" id="confirmPasswordField" value="confirme senha"><br>
+        <input class="login-submit" type="submit" id ="registerButton" value="Cadastrar"><br>
+      </form>
+    </div>
+  </body>
 	
 	<!-- <script src = "../script/FileSaver.js"></script> -->
   	<!-- isso a gente vai tirar quando der pra salvar no bd -->
