add manage pets section to owner view in home

--- a/templates/owner.html
+++ b/templates/owner.html
@@ -3,7 +3,11 @@
     Owner
   </h1>
   
-  <div id="searchHostContainer"></div>
+  <div id="searchHostContainer" class="homeComponent"></div>
+  
+  <div class="homeComponentsDivisor"></div>
+  
+  <div id="managePetsContainer" class="homeComponent"></div>
   
   <div class="homeComponentsDivisor"></div>
   
