add history section in owner view in home.html

--- a/templates/owner.html
+++ b/templates/owner.html
@@ -1,15 +1,17 @@
-<h1>
-  <h1 id="title">
-    Owner
-  </h1>
-  
-  <div id="searchHostContainer" class="homeComponent"></div>
-  
-  <div class="homeComponentsDivisor"></div>
-  
-  <div id="managePetsContainer" class="homeComponent"></div>
-  
-  <div class="homeComponentsDivisor"></div>
-  
-  <button id="buttonId">capivaras verdes</button>
+<h1 id="title">
+  Owner
 </h1>
+
+<div id="searchHostContainer" class="homeComponent"></div>
+<div class="homeComponentsDivisor"></div>
+
+
+<div id="ownerHistoryContainer" class="homeComponent"></div>
+<div class="homeComponentsDivisor"></div>
+
+
+<div id="managePetsContainer" class="homeComponent"></div>
+<div class="homeComponentsDivisor"></div>
+
+
+<button id="buttonId">capivaras verdes</button>
