controla se user logado é host ou owner

--- a/templates/host.html
+++ b/templates/host.html
@@ -1,6 +1,10 @@
 <h1 id="title">
   Host
 </h1>
-<h2 id="subtitle">
-  haverá coisas de host aqui
-</h2>
+
+<div id="hostHistoryContainer" class="homeComponent"></div>
+<div class="homeComponentsDivisor"></div>
+
+
+<div id="manageHomesContainer" class="homeComponent"></div>
+<div class="homeComponentsDivisor"></div>
