perfil funcionando mais ou menos

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,9 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900|Crete+Round" rel="stylesheet">
     <link href="../style/main.css" rel ="stylesheet" type="text/css"/>
     <link href="../style/home.css" rel ="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="../scripts/jquery-3.1.0.js"></script>
+    <script type="text/javascript" src="../scripts/model.js"></script>
+    <script type="text/javascript" src="../scripts/profile.js"></script>
   </head>
   <body>
     <div class="header-container">
@@ -23,11 +26,11 @@
     <div class="header-pseudo-shadow"></div>
 
     <div class="content-body">
-      <h1>Fulano de tal</h1>
+      <h1 id="name">Fulano de tal</h1>
       
       <div class="homeComponent">
-        <h2>E-mail</h2>
-        <h3>fulaninho@gmail.com</h3>
+        <h2 id=>E-mail</h2>
+        <h3 id="email">fulaninho@gmail.com</h3>
       </div>
       
       <div class="homeComponentsDivisor"></div>
@@ -41,7 +44,7 @@
       
       <div class="homeComponent">
         <h2>Cidade</h2>
-        <h3>Happy Harbor</h3>
+        <h3 id="city">Happy Harbor</h3>
       </div>
       
     </div>
