pode escolher entre host e owner no perfil agora (mas falta o bd pra salvar)

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -39,7 +39,10 @@
 
       <div class="homeComponent">
         <h2>Tipo de usuário</h2>
-        <h3>[X] Owner<br>[  ] Host</h3>
+          <form action="">
+            <input type="checkbox" id="ownerCheckbox">Owner<br>
+            <input type="checkbox" id="hostCheckbox">Host
+          </form>
       </div>
 
       <div class="homeComponentsDivisor"></div>
