tela das residencias do host ta na mao

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900|Crete+Round" rel="stylesheet">
     <link href="../style/main.css" rel ="stylesheet" type="text/css"/>
     <link href="../style/home.css" rel ="stylesheet" type="text/css"/>
-    
+
     <script type="text/javascript" src="../scripts/jquery-3.1.0.js"></script>
     <script type="text/javascript" src="../scripts/event.js"></script>
     <script type="text/javascript" src="../scripts/model.js"></script>
@@ -24,7 +24,7 @@
       <div class="header-links-container">
         <a class="header-link" href="home.html">Início</a>
         <a class="header-link" href="profile.html">Perfil</a>
-        <button class="header-link">Mensagens</button>
+        <a class="header-link" href="hostProfile.html">Mensagens</button>
         <button id="logoutButton" class="header-link">Sair</button>
       </div>
     </div>
