gerenciamento de abstrações de modelo de dados abstratos reprentando animais

--- a/templates/managePets.html
+++ b/templates/managePets.html
@@ -1,2 +1,11 @@
 <h2>Gerenciar pets</h2>
-<h3>Aqui vai ter uma lista com os pets do usuário</h3>
+
+<link href="../style/managePets.css" rel ="stylesheet" type="text/css"/>
+
+<button id="addButton" class="add-button">Adicionar</button>
+
+<div id="petsListContainer">
+	<ul id="petsList" class="petsList"></ul>
+</div>
+
+<script type="text/javascript" src="../scripts/managePets.js"></script>
