implementa gerenciamento de residências

--- a/templates/manageHomes.html
+++ b/templates/manageHomes.html
@@ -1,1 +1,11 @@
-<h3>manage homes</h3>
+<h2>Gerenciar residências</h2>
+
+<link href="../style/managePets.css" rel ="stylesheet" type="text/css"/>
+
+<button id="addHomeButton" class="add-button">Adicionar</button>
+
+<div id="homesListContainer">
+	<ul id="homesList" class="homesList"></ul>
+</div>
+
+<script type="text/javascript" src="../scripts/manageHomes.js"></script>
