--- a/templates/createPet.html
+++ b/templates/createPet.html
@@ -32,10 +32,10 @@
         <h1>Cadastrar novo pet</h1>
         
         <form action="javascript:void(0)">
-          <input class="login-field" id="petNameField" type="text" name="name" value="nome"><p style="display:none" id="petNameError"></p><br><br>
-          <input class="login-field" id="petSpeciesField" type="text" name="species" value="espécie"><p style="display:none" id="petSpeciesError"></p><br>
-          <input class="login-field" id="petSizeField" type="text" name="size" value="porte"><p style="display:none" id="petSizeError"></p><br>
-          <input class="login-field" id="petNatureField" type="text" name="nature" value="natureza"><p style="display:none" id="petNatureError"></p><br>
+          <input class="login-field" id="petNameField" type="text" name="name" value="nome"><p style="display:none" id="petNameFieldError"></p><br><br>
+          <input class="login-field" id="petSpeciesField" type="text" name="species" value="espécie"><p style="display:none" id="petSpeciesFieldError"></p><br>
+          <input class="login-field" id="petSizeField" type="text" name="size" value="porte"><p style="display:none" id="petSizeFieldError"></p><br>
+          <input class="login-field" id="petNatureField" type="text" name="nature" value="natureza"><p style="display:none" id="petNatureFieldError"></p><br>
           <input class="login-submit" id="createPetButton" type="submit" value="Criar"><br>
         </form>
     </div>
