--- a/templates/home.html
+++ b/templates/home.html
@@ -24,13 +24,13 @@
       <div class="header-links-container">
         <a class="header-link" href="home.html">Início</a>
         <a class="header-link" href="profile.html">Perfil</a>
-        <a class="header-link" href="hostProfile.html">Mensagens</button>
+        <a class="header-link" href="hostProfile.html">Mensagens</a>
         <button id="logoutButton" class="header-link">Sair</button>
       </div>
     </div>
     <div class="header-pseudo-shadow"></div>
 
-    <div align="center" id="swicth-user-mode-container" class="user-modes-container">
+    <div align="center" id="switch-user-mode-container" class="user-modes-container">
       <button id="ownerButton" class="user-mode">owner</button>
       <button id="hostButton" class="user-mode">host</button>
     </div>
