--- a/style/searchHosts.css
+++ b/style/searchHosts.css
@@ -1,9 +1,15 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 ul {
     list-style-type: none;
 }
 
 div ul li {
     margin: 5px;
+    padding-bottom: 25px;
 }
 
 img {
@@ -13,8 +19,23 @@ img {
 }
 
 div ul li p {
+
     display: inline-block;
     vertical-align: middle;
+    padding-left: 10px;
+}
+
+.host-details-button {
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+  background-color: #F18634;
+  text-align: center;
+  box-shadow: none;
+  margin-left: 200px;
+  border: none;
+  width: 10%;
 }
 
 .users-list {
