--- a/templates/hostProfile.html
+++ b/templates/hostProfile.html
@@ -7,8 +7,9 @@
     <link href="../style/home.css" rel ="stylesheet" type="text/css"/>
     <script type="text/javascript" src="../scripts/jquery-3.1.0.js"></script>
     <script type="text/javascript" src="../scripts/model.js"></script>
-    <script type="text/javascript" src="../scripts/profile.js"></script>
     <script type="text/javascript" src="../scripts/event.js"></script>
+    <link href="../style/searchHosts.css" rel ="stylesheet" type="text/css"/>
+
 
   </head>
   <body>
@@ -28,8 +29,14 @@
     <div class="header-pseudo-shadow"></div>
 
     <div class="content-body">
-      <h1 id="name">Fulano de tal</h1>
 
+      <h1 id="title">Residências do Pelé</h1>
+
+      <div class="users-list">
+      	<ul id="list" class="userList" size="10"></ul>
+      </div>
+      <script type="text/javascript" src="../scripts/userHomes.js"></script>
+<!--
       <div class="homeComponent">
         <h2 id=>E-mail</h2>
         <h3 id="email">fulaninho@gmail.com</h3>
@@ -51,7 +58,7 @@
         <h2>Cidade</h2>
         <h3 id="city">Happy Harbor</h3>
       </div>
-
+-->
     </div>
   </body>
 </html>
