--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -7,7 +7,6 @@
     <link href="../style/home.css" rel ="stylesheet" type="text/css"/>
     <script type="text/javascript" src="../scripts/jquery-3.1.0.js"></script>
     <script type="text/javascript" src="../scripts/model.js"></script>
-    <script type="text/javascript" src="../scripts/profile.js"></script>
     <script type="text/javascript" src="../scripts/event.js"></script>
 
   </head>
@@ -28,30 +27,15 @@
     <div class="header-pseudo-shadow"></div>
 
     <div class="content-body">
-      <h1 id="name">Fulano de tal</h1>
-
-      <div class="homeComponent">
-        <h2 id=>E-mail</h2>
-        <h3 id="email">fulaninho@gmail.com</h3>
-      </div>
-
+      
+      <h1>Notificações</h1>
+      
       <div class="homeComponentsDivisor"></div>
 
-      <div class="homeComponent">
-        <h2>Tipo de usuário</h2>
-          <form action="">
-            <input type="checkbox" id="ownerCheckbox">Owner<br>
-            <input type="checkbox" id="hostCheckbox">Host
-          </form>
+      <div class="homeComponent" id="notificationsContainer">
+        <ul id="notificationsList"></ul>
       </div>
-
-      <div class="homeComponentsDivisor"></div>
-
-      <div class="homeComponent">
-        <h2>Cidade</h2>
-        <h3 id="city">Happy Harbor</h3>
-      </div>
-
     </div>
+    <script type="text/javascript" src="../scripts/notifications.js"></script>
   </body>
 </html>
