testa se está logado quando tenta acessar home.html direto

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     
     <script type="text/javascript" src="../scripts/jquery-3.1.0.js"></script>
     <script type="text/javascript" src="../scripts/event.js"></script>
+    <script type="text/javascript" src="../scripts/model.js"></script>
     <script type="text/javascript" src="../scripts/index.js"></script>
   </head>
   <body>
@@ -14,12 +15,12 @@
     <div class="header-container">
       <div class="header-logo-container">
         <div class="header-logo-image" src="../images/guestPetLogo"></div>
-        <a id="homeButton" class="header-logo-title" href="index.html">GuestPet</a>
+        <a class="header-logo-title" href="index.html">GuestPet</a>
       </div>
 
       <div class="header-links-container">
-        <a class="header-link" href="register.html">Cadastre-se</a>
-        <a class="header-link" href="login.html">Entrar</a>
+        <a class="header-link" id="registerButton">Cadastre-se</a>
+        <a class="header-link" id="loginButton">Entrar</a>
       </div>
     </div>
     <div class="header-pseudo-shadow"></div>
