histórico de hospedagens do host implementado

--- a/templates/hostHistory.html
+++ b/templates/hostHistory.html
@@ -1,1 +1,9 @@
-<h3>host history</h3>
+<h2>Histórico de transações</h2>
+
+<link href="../style/managePets.css" rel ="stylesheet" type="text/css"/>
+
+<div id="hostHistoryContainer">
+	<ul id="hostHistory" class="hostHistoryContainer"></ul>
+</div>
+
+<script type="text/javascript" src="../scripts/hostHistory.js"></script>
