adiciona checkbox para escolher modo de usuário na tela de register

--- a/templates/mode-not-available.html
+++ b/templates/mode-not-available.html
@@ -1,1 +1,5 @@
-<h2>Você não está cadastrado neste modo de uso.</h2>
+<h3>
+  Você não está cadastrado neste modo de uso.
+  <br>
+  Acesse <b>Perfil</b> para alterar sua forma de usar GuestPet™.
+</h3>
