--- a/templates/register.html
+++ b/templates/register.html
@@ -26,6 +26,12 @@
         <input class="login-field" type="text" id="nameField" value="nome"> <p style="display:none" id="nameError"></p><br>
         <input class="login-field" type="text" id="emailField" value="email"><p style="display:none" id="emailError"></p><br>
         <input class="login-field" type="text" id="cityField" value="cidade"><p style="display:none" id="cityError"></p><br>
+        <br>
+        <input class="register-mode-checkbox" type="checkbox" id="isOwnerCheckbox"><b>Owner:</b> dono de animais em busca de hospedagem<br>
+        <input class="register-mode-checkbox" type="checkbox" id="isHostCheckbox"><b>Host:</b> dono de residências para hospedar animais de outrem<br>
+        <br>
+        <div style="display:none" id="checkBoxError"></div>
+        <br>
         <input class="login-field" type="password" id="passwordField" value="senha"><p style="display:none" id="passwordError"></p><br>
         <input class="login-field" type="password" id="confirmPasswordField" value="confirme senha"><br>
         <input class="login-submit" type="submit" id ="registerButton" value="Cadastrar"><br>
