--- a/templates/hostHistory.html
+++ b/templates/hostHistory.html
@@ -1,9 +1,9 @@
-<h2>Histórico de transações</h2>
+<h2>Histórico de hospedagens</h2>
 
 <link href="../style/managePets.css" rel ="stylesheet" type="text/css"/>
 
-<div id="hostHistoryContainer">
-	<ul id="hostHistory" class="hostHistoryContainer"></ul>
+<div id="hostHistory">
+	<ul id="hostHistoryList" class="hostHistoryList"></ul>
 </div>
 
 <script type="text/javascript" src="../scripts/hostHistory.js"></script>
