--- a/templates/ownerHistory.html
+++ b/templates/ownerHistory.html
@@ -1,2 +1,9 @@
-<h2>Histórico de<br>hospedagens</h2>
-<h3>Você ainda não realizou nenhuma hospedagem.<br>Utilize a busca acima para começar a desfrutar dos benefícios do GuestPet!</h3>
+<h2>Histórico de hospedagens</h2>
+
+<link href="../style/managePets.css" rel ="stylesheet" type="text/css"/>
+
+<div id="ownerHistory">
+	<ul id="ownerHistoryList" class="ownerHistory"></ul>
+</div>
+
+<script type="text/javascript" src="../scripts/ownerHistory.js"></script>
