implementa atividade recente de owner

--- a/templates/owner.html
+++ b/templates/owner.html
@@ -6,6 +6,10 @@
 <div class="homeComponentsDivisor"></div>
 
 
+<div id="ownerRecentActivityContainer" class="homeComponent"></div>
+<div class="homeComponentsDivisor"></div>
+
+
 <div id="managePetsContainer" class="homeComponent"></div>
 <div class="homeComponentsDivisor"></div>
 
