--- a/style/home.css
+++ b/style/home.css
@@ -11,7 +11,7 @@ h1 {
   font-size: 36px;
   font-weight: 700;
   color: #222;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 h2 {
@@ -26,7 +26,7 @@ h3 {
   font-size: 20px;
   font-weight: 300;
   color: #777;
-  margin-top: 15px;
+  margin: 0;
 }
 
 .user-modes-container {
