implementa atividade recente de host

--- a/templates/host.html
+++ b/templates/host.html
@@ -2,6 +2,7 @@
   Host
 </h1>
 
+<div id="hostRecentActivityContainer" class="homeComponent"></div>
 <div class="homeComponentsDivisor"></div>
 
 <div id="manageHomesContainer" class="homeComponent"></div>
