cria banco de dados e linka com o criaçao de user, pet, casa, login. falta ainda as transações

--- a/templates/createHome.html
+++ b/templates/createHome.html
@@ -32,9 +32,10 @@
         <h1>Cadastrar nova residência</h1>
         
         <form action="javascript:void(0)">
-          <input class="login-field" id="homeNameField" type="text" name="name" value="nome"><p style="display:none" id="homeNameFieldError"></p><br><br>
-          <input class="login-field" id="homeCapacityField" type="text" name="species" value="capacidade"><p style="display:none" id="homeCapacityFieldError"></p><br>
+          <input class="login-field" id="homeNameField" type="text" name="name" value="nome"><p style="display:none" id="homeNameFieldError"></p><br>
           <input class="login-field" id="homeDescriptionField" type="text" name="size" value="descrição"><p style="display:none" id="homeDescriptionFieldError"></p><br>
+          <input class="login-field" id="homeCapacityField" type="text" name="species" value="capacidade"><p style="display:none" id="homeCapacityFieldError"></p><br>
+          <input class="login-field" id="homeValueField" type="text" name="species" value="valor"><p style="display:none" id="homeValueFieldError"></p><br>
           <input class="login-field" id="homeStreetField" type="text" name="nature" value="rua"><p style="display:none" id="homeStreetFieldError"></p><br>
           <input class="login-field" id="homeNumberField" type="text" name="nature" value="número"><p style="display:none" id="homeNumberFieldError"></p><br>
           <input class="login-field" id="homeCityField" type="text" name="nature" value="cidade"><p style="display:none" id="homeCityFieldError"></p><br>
