--- a/templates/createPet.html
+++ b/templates/createPet.html
@@ -32,7 +32,7 @@
         <h1>Cadastrar novo pet</h1>
         
         <form action="javascript:void(0)">
-          <input class="login-field" id="petNameField" type="text" name="name" value="nome"><p style="display:none" id="petNameFieldError"></p><br><br>
+          <input class="login-field" id="petNameField" type="text" name="name" value="nome"><p style="display:none" id="petNameFieldError"></p><br>
           <input class="login-field" id="petSpeciesField" type="text" name="species" value="espécie"><p style="display:none" id="petSpeciesFieldError"></p><br>
           <input class="login-field" id="petSizeField" type="text" name="size" value="porte"><p style="display:none" id="petSizeFieldError"></p><br>
           <input class="login-field" id="petNatureField" type="text" name="nature" value="natureza"><p style="display:none" id="petNatureFieldError"></p><br>
