--- a/templates/register.html
+++ b/templates/register.html
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <form action="javascript:void(0)">
+      <form id="registerForm" action="javascript:void(0)">
         <input class="login-field" type="text" id="nameField" value="nome"> <p style="display:none" id="nameError"></p><br>
         <input class="login-field" type="text" id="emailField" value="email"><p style="display:none" id="emailError"></p><br>
         <input class="login-field" type="text" id="cityField" value="cidade"><p style="display:none" id="cityError"></p><br>
