--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,11 +27,11 @@
     <div class="header-pseudo-shadow"></div>
 
     <div class="content-body">
-      <h1 id="name">Fulano de tal</h1>
+      <h1 id="name">-</h1>
 
       <div class="homeComponent">
         <h2 id=>E-mail</h2>
-        <h3 id="email">fulaninho@gmail.com</h3>
+        <h3 id="email">-</h3>
       </div>
 
       <div class="homeComponentsDivisor"></div>
@@ -48,9 +48,10 @@
 
       <div class="homeComponent">
         <h2>Cidade</h2>
-        <h3 id="city">Happy Harbor</h3>
+        <h3 id="city">-</h3>
       </div>
-
+      <br>
+      <button id="saveChangesButton">Salvar</button>
     </div>
   </body>
 </html>
